--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,44 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
+.container {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+  width: 10em;
+  height: 1.3em;
+  border-radius: 10px;
+  padding: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.75);
+  transition: 0.2s;
 }
 
-@keyframes App-logo-spin {
+.btn:hover {
+  width: 10.3em;
+  height: 1.45em;
+  transition: 0.2s;
+}
+
+.btn--white {
+  background-color: white;
+  color: #282c34;
+}
+
+.btn__img {
+  width: 20px;
+  margin-left: 0.5em;
+}
+
+@keyframes spin {
   from {
     transform: rotate(0deg);
   }
@@ -31,3 +46,18 @@
     transform: rotate(360deg);
   }
 }
+
+.spin {
+  animation: spin 1.5s infinite;
+}
+
+.pokemon {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pokemon__name {
+  color: white;
+}
+
