basic find pokemon feature working

--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,20 @@
   -moz-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.75);
   transition: 0.2s;
+  margin: 2em;
 }
 
 .btn:hover {
-  width: 10.3em;
-  height: 1.45em;
+  -webkit-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 1);
+  box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 1);
   transition: 0.2s;
+}
+
+.btn--corner {
+  position: fixed;
+  bottom: 0;
+  right: 0;
 }
 
 .btn--white {
@@ -34,7 +42,7 @@
 }
 
 .btn__img {
-  width: 20px;
+  width: 30px;
   margin-left: 0.5em;
 }
 
@@ -57,7 +65,17 @@
   align-items: center;
 }
 
-.pokemon__name {
-  color: white;
+.pokemon__details {
+  display: flex;
+  flex-direction: column;
 }
 
+.pokemon__details__name {
+  color: white;
+  margin: 0.3em;
+}
+
+.pokemon__sprite {
+  max-width: 100px;
+  height: auto;
+}
