--- a/src/App.css
+++ b/src/App.css
@@ -24,13 +24,14 @@
 }
 
 .btn:hover {
-  -webkit-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 1);
-  -moz-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 1);
-  box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 1);
+  -webkit-box-shadow: 0px 0px 60px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 60px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 60px 0px rgba(0, 0, 0, 0.75);
   transition: 0.2s;
 }
 
-.btn--corner {
+.corner {
+  display: flex;
   position: fixed;
   bottom: 0;
   right: 0;
