--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-		"Helvetica Neue", sans-serif;
+	font-family: "Pokemon Solid", monospace;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-user-select: none; /* Chrome/Safari */
@@ -14,4 +12,9 @@ body {
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
+}
+
+@font-face {
+	font-family: "Pokemon Solid";
+	src: url("./fonts/Pokemon Solid.ttf") format("truetype");
 }
