--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .container {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	padding: 2em;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
