--- a/src/components/Pokemon/pokemon.css
+++ b/src/components/Pokemon/pokemon.css
@@ -49,3 +49,14 @@
 		width: 50px;
 	}
 }
+
+@media (max-width: 700px) {
+	.pokemon {
+		flex-direction: column;
+	}
+
+	.capture__error {
+		margin-left: 0;
+		max-width: 100%;
+	}
+}
